--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -1,13 +1,13 @@
 web:
   build: .
-  command: mix deps.get || npm install || node node_modules/brunch/bin/brunch build || mix phoenix.server
+  command: mix deps.get && npm install && node node_modules/brunch/bin/brunch build && mix phoenix.server
   environment:
     - PG_HOST=postgres
     - PG_USERNAME=postgres
   volumes:
     - .:/app
   ports:
-    - 3001:3001
+    - 4000:4000
   links:
     - postgres
   stdin_open: true
