--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -1,7 +1,7 @@
 web:
   build: .
   user: $UID
-  command: bash -c "mix deps.get && npm install && node node_modules/brunch/bin/brunch build && mix phoenix.server"
+  command: bash -c "mix deps.get && npm install && node node_modules/brunch/bin/brunch build && mix ecto.migrate && mix phoenix.server"
   environment:
     - PG_HOST=postgres
     - PG_USERNAME=postgres
@@ -14,6 +14,8 @@ web:
   stdin_open: true
   tty: true
 
+
+  
 postgres:
   image: postgres:9.6.3
   ports:
