--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "phoenix": "file:deps/phoenix",
-    "phoenix_html": "file:deps/phoenix_html",
+    "phoenix_html": "file:deps/phoenix_html"
   },
   "devDependencies": {
     "babel-brunch": "~6.0.0",
@@ -15,6 +15,6 @@
     "clean-css-brunch": "~2.0.0",
     "css-brunch": "~2.0.0",
     "javascript-brunch": "~2.0.0",
-    "uglify-js-brunch": "~2.0.1",
+    "uglify-js-brunch": "~2.0.1"
   }
 }
