--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
-web:
-  build: .
+app:
+  build: app
   user: $UID
-  command: bash -c "mix deps.get && npm install && node node_modules/brunch/bin/brunch build && mix ecto.migrate && mix phoenix.server"
+  command: bash -c "mix deps.get && mix ecto.migrate && mix phoenix.server"
   environment:
     - INFLUXDB_HOST=influxdb
     - PG_HOST=postgres
     - PG_USERNAME=postgres
   volumes:
-    - .:/app
+    - ./app:/app
   ports:
     - 4000:4000
   links:
@@ -15,12 +15,27 @@ web:
     - influxdb
   stdin_open: true
   tty: true
-  
+
+web:
+  build: web
+  user: $UID
+  command: bash -c "npm install && npm run start"
+  environment:
+    - API_HOST=app
+  volumes:
+    - ./web:/app
+  ports:
+    - 4200:4200
+  links:
+    - app
+  stdin_open: true
+  tty: true
+
 postgres:
   image: postgres:9.6.3
   ports:
     - 5432
-    
+
 influxdb:
   image: influxdb:1.2.4
   ports:
