--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,17 +15,11 @@ jobs:
           name: build docker images
           command: docker-compose build
       - run:
-          name: download elixir deps
+          name: Intialize DB
           command: docker-compose up -d
       - run:
           name: Intialize DB
           command: docker-compose run app mix ecto.create
-      - run:
-          name. 
-      - save_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
-          paths:
-            - .node_modules
       - run:
           name: test
           command: docker-compose run app mix test
