adding deploy parameters

--- a/circle.yml
+++ b/circle.yml
@@ -30,3 +30,12 @@ test:
   override:
     - cd app && mix test
 
+deployment:
+  production:
+    branch: production
+    heroku:
+      appname: sense
+  staging:
+    branch: master
+    heroku:
+      appname: sense-staging
