adding continous deployment

--- a/circle.yml
+++ b/circle.yml
@@ -39,6 +39,9 @@ deployment:
     heroku:
       appname: sense
   staging:
-    branch: master
-    heroku:
-      appname: sense-staging
+    branch: continous-deployment
+    commands:
+      - git remote add heroku git@heroku.com:sense-staging.git
+      - "[[ ! -s \"$(git rev-parse --git-dir)/shallow\" ]] || git fetch --unshallow"
+      - git subtree push --prefix app git@heroku.com:sense-staging.git heroku master
+      - heroku run --app sense-staging  "POOL_SIZE=2 mix ecto.migrate"
