fixing deploy commands

--- a/circle.yml
+++ b/circle.yml
@@ -36,12 +36,15 @@ test:
 deployment:
   production:
     branch: production
-    heroku:
-      appname: sense
+    commands:
+      - git remote add heroku git@heroku.com:sense.git
+      - "[[ ! -s \"$(git rev-parse --git-dir)/shallow\" ]] || git fetch --unshallow"
+      - git subtree push --prefix app heroku master
+      - heroku run --app sense "POOL_SIZE=2 mix ecto.migrate"
   staging:
     branch: continous-deployment
     commands:
       - git remote add heroku git@heroku.com:sense-staging.git
       - "[[ ! -s \"$(git rev-parse --git-dir)/shallow\" ]] || git fetch --unshallow"
-      - git subtree push --prefix app git@heroku.com:sense-staging.git heroku master
+      - git subtree push --prefix app heroku master
       - heroku run --app sense-staging  "POOL_SIZE=2 mix ecto.migrate"
