--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     build:
       context: ./web
     user: $UID
-    command: bash -c "npm install || npm run start"
+    command: bash -c "npm install && npm run start"
     environment:
       - API_HOST=app
     volumes:
