adding chronograf to monitorize measures and adding a parameter to write measures method

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,3 +46,10 @@ services:
     ports:
       - 8086:8086
       - 8083:8083
+  chronograf:
+    image: chronograf:latest
+    depends_on:
+      - influxdb
+    ports:
+      - 8888:8888
+      
