--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,10 +19,10 @@ services:
     ports:
       - 4000:4000
     user: $UID
-    command: bash -c "mix deps.get || mix ecto.migrate && mix phoenix.server"
+    command: bash -c "mix phoenix.server"
     volumes:
       - ${PWD}/app:/app
-    
+
     stdin_open: true
     tty: true
 
@@ -30,7 +30,7 @@ services:
     build:
       context: ./web
     user: $UID
-    command: bash -c "npm install && npm run start"
+    command: bash -c "npm run start"
     environment:
       - API_HOST=app
     volumes:
@@ -58,4 +58,3 @@ services:
       - influxdb
     ports:
       - 8888:8888
-      
