--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,9 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "material-design-icons": "^3.0.1",
+    "material-icons": "^0.2.3",
+    "roboto-fontface": "^0.10.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
