--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
           name: "Install base deps"
           command: |
             apt-get update -qq
-            apt-get install -y build-essential libpq-dev nodejs locales
+            apt-get install -y build-essential libpq-dev nodejs locales nano
             echo "en_US.UTF-8 UTF-8" > /etc/locale.gen
       - run: locale-gen
       - checkout
@@ -36,16 +36,7 @@ jobs:
             - v1-mix-deps-cache-{{ .Branch }}
             - v1-mix-deps-cache
       - run: mix local.hex --force && mix local.rebar --force 
-      - run: cd app && mix deps.get && mix deps.compile
-      - save_cache:
-          key: v1-mix-build-cache-{{ .Branch }}-{{ checksum "app/mix.lock" }}
-          paths: "./app/_build"
-      - save_cache:
-          key: v1-mix-build-cache-{{ .Branch }}
-          paths: "./app/_build"
-      - save_cache:
-          key: v1-mix-build-bundle-cache
-          paths: "./app/_build"
+      - run: cd app && mix deps.get
       - save_cache:
           key: v1-mix-deps-cache-{{ .Branch }}-{{ checksum "app/mix.lock" }}
           paths: "./app/deps"
@@ -55,6 +46,16 @@ jobs:
       - save_cache:
           key: v1-mix-deps-bundle-cache
           paths: "./app/deps"
+      - run: cd app && mix test || true
       - run: cd app && mix test
+      - save_cache:
+          key: v1-mix-build-cache-{{ .Branch }}-{{ checksum "app/mix.lock" }}
+          paths: "./app/_build"
+      - save_cache:
+          key: v1-mix-build-cache-{{ .Branch }}
+          paths: "./app/_build"
+      - save_cache:
+          key: v1-mix-build-bundle-cache
+          paths: "./app/_build"
       - store_test_results:
           path: "./app/tmp/reports"
