--- a/web/package.json
+++ b/web/package.json
@@ -23,8 +23,10 @@
     "@angular/platform-browser": "^4.4.7",
     "@angular/platform-browser-dynamic": "^4.4.7",
     "@angular/router": "^4.4.7",
+    "angular-fusioncharts": "^2.0.2",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.7",
+    "fusioncharts": "^3.13.1-sr.2",
     "hammerjs": "^2.0.8",
     "material-design-icons": "^3.0.1",
     "material-icons": "^0.2.3",
