--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^4.4.7",
     "@angular/platform-browser-dynamic": "^4.4.7",
     "@angular/router": "^4.4.7",
+    "@swimlane/ngx-charts": "^9.0.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.7",
     "hammerjs": "^2.0.8",
