--- a/infra/mosquitto.conf
+++ b/infra/mosquitto.conf
@@ -3,8 +3,8 @@ allow_zero_length_clientid true
 autosave_interval 60
 autosave_on_changes false
 connection_messages true
-log_dest stderr
-log_type all
+log_dest stdout
+log_types subscribe,unsubscribe
 log_timestamp true
 max_inflight_messages 40
 max_queued_messages 200
