--- a/web/package.json
+++ b/web/package.json
@@ -12,17 +12,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.4.7",
-    "@angular/cdk": "^2.0.0-beta.12",
-    "@angular/common": "^4.4.7",
-    "@angular/compiler": "^4.4.7",
-    "@angular/core": "^4.4.7",
-    "@angular/forms": "^4.4.7",
-    "@angular/http": "^4.4.7",
-    "@angular/material": "^2.0.0-beta.12",
-    "@angular/platform-browser": "^4.4.7",
-    "@angular/platform-browser-dynamic": "^4.4.7",
-    "@angular/router": "^4.4.7",
+    "@angular/animations": "^6.1.10",
+    "@angular/cdk": "^7.0.0-rc.1",
+    "@angular/common": "^6.1.10",
+    "@angular/compiler": "^6.1.10",
+    "@angular/core": "^6.1.10",
+    "@angular/forms": "^6.1.10",
+    "@angular/http": "^6.1.10",
+    "@angular/material": "^7.0.0-rc.1",
+    "@angular/platform-browser": "^6.1.10",
+    "@angular/platform-browser-dynamic": "^6.1.10",
+    "@angular/router": "^6.1.10",
     "@swimlane/ngx-charts": "^9.0.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.7",
@@ -30,27 +30,29 @@
     "material-design-icons": "^3.0.1",
     "material-icons": "^0.2.3",
     "roboto-fontface": "^0.10.0",
-    "rxjs": "^5.5.12",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.0.0-rc.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.1.2",
-    "@angular/compiler-cli": "^4.4.7",
-    "@angular/language-service": "^4.4.7",
-    "@types/jasmine": "2.5.45",
-    "@types/node": "^6.0.117",
-    "codelyzer": "~3.0.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "^4.1.1",
-    "karma": "^1.7.1",
-    "karma-chrome-launcher": "~2.1.1",
+    "@angular-devkit/build-angular": "~0.8.0",
+    "@angular/cli": "^6.2.5",
+    "@angular/compiler-cli": "^6.1.10",
+    "@angular/language-service": "^6.1.10",
+    "@types/jasmine": "2.8.9",
+    "@types/node": "^10.11.7",
+    "codelyzer": "4.5.0",
+    "jasmine-core": "~3.2.1",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^3.0.0",
+    "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.3",
+    "karma-coverage-istanbul-reporter": "^2.0.4",
     "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~3.0.4",
-    "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "karma-jasmine-html-reporter": "^1.3.1",
+    "protractor": "^5.4.1",
+    "ts-node": "~7.0.1",
+    "tslint": "~5.11.0",
+    "typescript": "^2.9.2"
   }
 }
