--- a/web/package.json
+++ b/web/package.json
@@ -29,6 +29,7 @@
     "hammerjs": "^2.0.8",
     "material-design-icons": "^3.0.1",
     "material-icons": "^0.2.3",
+    "ngx-mqtt": "^6.7.0",
     "roboto-fontface": "^0.10.0",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.0.0-rc.0",
