first prod kube env working

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,7 @@ services:
     image: basestylo/sense_web
     build:
       context: ./web
+      target: dev
     user: $UID
     environment:
       - API_HOST=app
